<resources>
    <string name="app_name">LocationNoteApp</string>
    <string name="menu_map">Map</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_create">Create</string>
    <string name="notes_list_str">Notes List</string>
    <string name="long_click_action">Long click to get route</string>
    <string name="current_location_str">Current Location</string>
    <string name="your_location_str">Your Location</string>
    <string name="down_icon">Down Icon</string>
    <string name="path">Path</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_note_title">Create Note</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="note_address">Note Address</string>
    <string name="submit">Submit</string>
    <string name="darker_background_image">Darker Background Image</string>
    <string name="light_background_image">Light Background Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_header">Sign-in</string>
    <string name="sign_in_underline"><u>Sign-in</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_header">Sign-up</string>
    <string name="sign_up_underline"><u>Sign-up</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="location_need_granted">Location permissions need to be granted to use application</string>
    <string name="order_by_created">Order By Created</string>
    <string name="sign_out">Sign out</string>
    <string name="order_by_title">Order By Title</string>
    <string name="distance_format">%1$.2f KM</string>
</resources>